force-app/main/default/objects/Transaction__c/fields/Completion_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time_Stamp__c</fullName>
    <label>Completion Time Stamp</label>
    <type>DateTime</type>
</CustomField>