force-app/main/default/objects/Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>creditcard</fullName>
                <label>Card</label>
            </value>
            <value>
                <fullName>paypal</fullName>
                <label>Pay Pal</label>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>