force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Method__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Order_Custom__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>