force-app/main/default/objects/Transaction__c/listViews/Payments_Status_Overview.listView-meta.xml
<ListView>
    <fullName>Payments_Status_Overview</fullName>
    <columns>NAME</columns>
    <columns>Order_Custom__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Payments Status</label>
</ListView>