force-app/main/default/objects/Transaction__c/listViews/PayPal.listView-meta.xml
<ListView>
    <fullName>PayPal</fullName>
    <columns>NAME</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Custom__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Method__c</field>
        <operation>equals</operation>
        <value>paypal</value>
    </filters>
    <label>PayPal</label>
</ListView>